methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:1: error: Missing closing brace `}' assumed here
override def run() {for(i<- 1 to 2 ){b(Color.red,Color.blue,Color.green,Color.yellow);avance (4)
^PatternPicture:1: error: expected start of definition
override def run() {for(i<- 1 to 2 ){b(Color.red,Color.blue,Color.green,Color.yellow);avance (4)
         ^